--- a/easy_model.ipynb
+++ b/easy_model.ipynb
@@ -246,6 +246,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Client dataset indices saved to disk.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "# Create directory to store the client datasets\n",
+    "save_dir = \"saved_clients\"\n",
+    "os.makedirs(save_dir, exist_ok=True)\n",
+    "\n",
+    "# Save each client dataset (indices only, since MNIST is publicly downloadable)\n",
+    "for i, indices in enumerate(client_data):\n",
+    "    file_path = os.path.join(save_dir, f\"client_{i}_indices.pt\")\n",
+    "    torch.save(indices, file_path)\n",
+    "\n",
+    "print(\"Client dataset indices saved to disk.\")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
